# PCL_Object_Classifier

./: CMakeLists.txt  ObjectSegmenter.cpp  PointCloudObject.cpp  PointCloudObject.h
dataset/objects_3dwarehouse/pc/bowl/: bowl_1_0.ply  bowl_1_1.ply  bowl_1_2.ply  bowl_1_3.ply  bowl_1_4.ply  bowl_1_5.ply  bowl_1_6.ply  bowl_1_7.ply  bowl_1_8.ply  bowl_2_0.ply  bowl_2_1.ply  bowl_2_2.ply  bowl_2_3.ply  bowl_2_4.ply  bowl_2_5.ply  bowl_2_6.ply  bowl_2_7.ply  bowl_2_8.ply  bowl_3_0.ply  bowl_3_1.ply  bowl_3_2.ply  bowl_3_3.ply  bowl_3_4.ply  bowl_3_5.ply  bowl_3_6.ply  bowl_3_7.ply  bowl_3_8.ply  bowl_4_0.ply  bowl_4_1.ply  bowl_4_2.ply  bowl_4_3.ply  bowl_4_4.ply  bowl_4_5.ply  bowl_4_6.ply  bowl_4_7.ply  bowl_4_8.ply  bowl_5_0.ply  bowl_5_1.ply  bowl_5_2.ply  bowl_5_3.ply  (+5 more)
dataset/objects_3dwarehouse/pc/cap/: cap_1_0.ply  cap_1_1.ply  cap_1_2.ply  cap_1_3.ply  cap_1_4.ply  cap_1_5.ply  cap_1_6.ply  cap_1_7.ply  cap_1_8.ply  cap_2_0.ply  cap_2_1.ply  cap_2_2.ply  cap_2_3.ply  cap_2_4.ply  cap_2_5.ply  cap_2_6.ply  cap_2_7.ply  cap_2_8.ply  cap_3_0.ply  cap_3_1.ply  cap_3_2.ply  cap_3_3.ply  cap_3_4.ply  cap_3_5.ply  cap_3_6.ply  cap_3_7.ply  cap_3_8.ply  cap_4_0.ply  cap_4_1.ply  cap_4_2.ply  cap_4_3.ply  cap_4_4.ply  cap_4_5.ply  cap_4_6.ply  cap_4_7.ply  cap_4_8.ply  cap_5_0.ply  cap_5_1.ply  cap_5_2.ply  cap_5_3.ply  (+5 more)
dataset/objects_3dwarehouse/pc/cereal_box/: cereal_box_1_0.ply  cereal_box_1_1.ply  cereal_box_1_2.ply  cereal_box_1_3.ply  cereal_box_1_4.ply  cereal_box_1_5.ply  cereal_box_1_6.ply  cereal_box_1_7.ply  cereal_box_1_8.ply  cereal_box_2_0.ply  (+35 more)
(+438 files in other folders)
